# DeveloperGlobalChat

./: .gitignore  B.py  LICENSE  README.md  main.py  profanity.txt  pyproject.toml  requirements.txt  test.py
.github/workflows/: ci.yml
cogs/: global.py  jsk.py  listeners.py  owner.py
utils/: __init__.py  buttons.py  censor.py  extra.py
